--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -8,7 +8,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/upload-artifact@v4.3.3
 
     - name: Create a text file
       run: echo "Hello, world!" > hello.txt
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Download text file
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v4.1.7
         with:
           name: hello.txt
           path: ./artifact
