--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -5,20 +5,17 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Create a text file
-      run: echo "Hello, world!" > hello.txt
-
-    - name: Archive text file
-      uses: actions/upload-artifact@v2
-      with:
-        name: hello-artifact
-        path: hello.txt
-  download:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Create a text file
+        run: 'echo "Hello, world!" > hello.txt'
+      - name: Archive text file
+        uses: actions/upload-artifact@v2
+        with:
+          name: hello-artifact
+          path: hello.txt
+  download: #added
     needs: build
     runs-on: ubuntu-latest
     steps:
@@ -26,8 +23,8 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: hello-artifact
-          path: ./artifact
-      - name: View hello.txt
-        run: cat ./artifact/hello.txt
+          path: ./artifacts
+      - name: Display content of the text file
+        run: cat ./artifacts/hello.txt
         
   
